welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:10: error: '<-' expected but ')' found.
        	for (dejaFait != nbPas){
                                      ^Methods:16: error: illegal start of simple expression
        }
        ^